--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
       <button class="button subscription-button" type="submit">Подписаться</button>
     </form>
   </div>
+  <script src="script.js"></script>
 </body>
-
 </html>
