--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <body>
   <div class="container">
     <h1 class="inner-heading">Подпишитесь на рассылку</h1>
-    <p class="subscription-message">Мы будем присылать вам новости один раз в день.</p>
-    <div class="check__inner">
-      <div class="check">&#10150;</div>
+    <div class="subscription-message">
+      <p class="subscription-text">Мы будем присылать вам новости один раз в день.</p>
+      <div class="check__inner">
+        <div class="check">&#10150;</div>
+      </div>
     </div>
 
     <form action="#" method="post" class="subscription">
